--- a/public/css/login-styles.css
+++ b/public/css/login-styles.css
@@ -3,7 +3,7 @@ html {
   padding: 0;
 }
 body {
-  background-color: rgb(233, 107, 107);
+  background-color:#e0e7ff;
 }
 .sr-only {
   position: absolute;
